--- a/server/locales/es.json
+++ b/server/locales/es.json
@@ -1,4 +1,6 @@
 {
     "Bienvenido": "Bienvenido",
-    "Cuora Neo Web": "Cuora Neo Web _es"
+    "Cuora Neo Web": "Cuora Neo Web _es",
+    "ContraseñaIncorrecta": "Contraseña incorrecta!!!",
+    "btn_aceptar": "ACEPTAR"
 }
